# lmfit_odr

./: .gitignore  LICENSE  pyproject.toml  test.ipynb
lmfit_odr/: __init__.py
